--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "clean": "rm -rf ./build/* && echo 'cleaned build location'",
-    "build-macos": "electron-packager . --platform=darwin --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore='src\/bitsy\/(?!editor)' --ignore='test' && echo 'built for macos'",
-    "build":  "npm run clean && npm run build-macos"
+    "clean": "rm -rf ./build/* && echo \"cleaned build location\"",
+    "build-macos": "electron-packager . --platform=darwin --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src\/bitsy\/(?!editor)\" --ignore=\"test\" && echo \"built for macos\"",
+    "build-windows": "electron-packager . --platform=win32  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src\/bitsy\/(?!editor)\" --ignore=\"test\" && echo \"built for windows\"",
+    "build-linux": "electron-packager . --platform=linux  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src\/bitsy\/(?!editor)\" --ignore=\"test\" && echo \"built for linux\"",
+    "build":  "npm run clean && npm run build-macos && npm run build-linux && npm run build-windows && echo \"build successful\""
   },
   "repository": {
     "type": "git",
