--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "start": "electron .",
     "clean": "rm -rf ./build/* && echo \"cleaned build location\"",
-    "build-macos": "electron-packager . --platform=darwin --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src\/bitsy\/(?!editor)\" --ignore=\"test\" && echo \"built for macos\"",
+    "build-mac": "electron-packager . --platform=darwin --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src\/bitsy\/(?!editor)\" --ignore=\"test\" && echo \"built for mac\"",
     "build-windows": "electron-packager . --platform=win32  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src\/bitsy\/(?!editor)\" --ignore=\"test\" && echo \"built for windows\"",
     "build-linux": "electron-packager . --platform=linux  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src\/bitsy\/(?!editor)\" --ignore=\"test\" && echo \"built for linux\"",
-    "build":  "npm run clean && npm run build-macos && npm run build-linux && npm run build-windows && echo \"build successful\""
+    "build":  "npm run clean && npm run build-mac && npm run build-linux && npm run build-windows && echo \"build successful\"",
+    "push_mac": "butler push ./build/bitsy-savior-darwin-x64/ aloelazoe/bitsy-savior:mac-64",
+    "push_linux": "butler push ./build/bitsy-savior-linux-x64/ aloelazoe/bitsy-savior:linux-64",
+    "push_win": "butler push ./build/bitsy-savior-win32-x64/ aloelazoe/bitsy-savior:windows-64",
+    "push": "npm run push_mac && npm run push_linux && npm run push_win && butler status aloelazoe/bitsy-savior",
+    "publish": "npm run build && npm run push"
   },
   "repository": {
     "type": "git",
