--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "bitsy-savior",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "bitsy editor by Adam Le Doux put in a desktop app. can update game data in exported html files on your disk. super useful when you work with bitsy-hacks",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "clean": "rm -rf ./build/* && echo \"cleaned build location\"",
-    "build-mac": "electron-packager . --platform=darwin --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src\/bitsy\/(?!editor)\" --ignore=\"test\" && echo \"built for mac\"",
-    "build-windows": "electron-packager . --platform=win32  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src\/bitsy\/(?!editor)\" --ignore=\"test\" && echo \"built for windows\"",
-    "build-linux": "electron-packager . --platform=linux  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src\/bitsy\/(?!editor)\" --ignore=\"test\" && echo \"built for linux\"",
-    "build":  "npm run clean && npm run build-mac && npm run build-linux && npm run build-windows && echo \"build successful\"",
+    "build-mac": "electron-packager . --platform=darwin --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor)\" --ignore=\"test\" && echo \"built for mac\"",
+    "build-windows": "electron-packager . --platform=win32  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor)\" --ignore=\"test\" && echo \"built for windows\"",
+    "build-linux": "electron-packager . --platform=linux  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor)\" --ignore=\"test\" && echo \"built for linux\"",
+    "build": "npm run clean && npm run build-mac && npm run build-linux && npm run build-windows && echo \"build successful\"",
     "push_mac": "butler push ./build/bitsy-savior-darwin-x64/ aloelazoe/bitsy-savior:mac-64",
     "push_linux": "butler push ./build/bitsy-savior-linux-x64/ aloelazoe/bitsy-savior:linux-64",
     "push_win": "butler push ./build/bitsy-savior-win32-x64/ aloelazoe/bitsy-savior:windows-64",
