--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "electron .",
     "clean": "rm -rf ./build/* && echo \"cleaned build location\"",
-    "build-mac": "electron-packager . --platform=darwin --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor)\" --ignore=\"test\" && echo \"built for mac\"",
-    "build-windows": "electron-packager . --platform=win32  --arch=all --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor)\" --ignore=\"test\" && echo \"built for windows\"",
-    "build-linux": "electron-packager . --platform=linux  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor)\" --ignore=\"test\" && echo \"built for linux\"",
+    "build-mac": "electron-packager . --platform=darwin --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor|LICENSE)\" --ignore=\"test\" && echo \"built for mac\"",
+    "build-windows": "electron-packager . --platform=win32  --arch=all --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor|LICENSE)\" --ignore=\"test\" && echo \"built for windows\"",
+    "build-linux": "electron-packager . --platform=linux  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor|LICENSE)\" --ignore=\"test\" && echo \"built for linux\"",
     "build": "npm run clean && npm run build-mac && npm run build-linux && npm run build-windows && echo \"build successful\"",
     "push_mac": "butler push ./build/bitsy-savior-darwin-x64/ aloelazoe/bitsy-savior:mac-64 --userversion-file build-version.txt",
     "push_linux": "butler push ./build/bitsy-savior-linux-x64/ aloelazoe/bitsy-savior:linux-64 --userversion-file build-version.txt",
