add checking for new version

--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
     "build-windows": "electron-packager . --platform=win32  --arch=all --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor|LICENSE)\" --ignore=\"test\" && echo \"built for windows\"",
     "build-linux": "electron-packager . --platform=linux  --arch=x64 --out=build/ --overwrite --icon=src/bitsy/editor/icons/bitsy.icns --ignore=\"src/bitsy/(?!editor|LICENSE)\" --ignore=\"test\" && echo \"built for linux\"",
     "build": "npm run clean && npm run build-mac && npm run build-linux && npm run build-windows && echo \"build successful\"",
-    "push_mac": "butler push ./build/bitsy-savior-darwin-x64/ aloelazoe/bitsy-savior:mac-64 --userversion-file build-version.txt",
-    "push_linux": "butler push ./build/bitsy-savior-linux-x64/ aloelazoe/bitsy-savior:linux-64 --userversion-file build-version.txt",
-    "push_win": "butler push ./build/bitsy-savior-win32-x64/ aloelazoe/bitsy-savior:windows-64 --userversion-file build-version.txt && butler push ./build/bitsy-savior-win32-ia32/ aloelazoe/bitsy-savior:windows-32 --userversion-file build-version.txt",
-    "push": "npm run push_mac && npm run push_linux && npm run push_win && butler status aloelazoe/bitsy-savior",
-    "publish": "npm run build && npm run push",
-    "version": "node ./scripts/version.js && git add build-version.txt"
+    "push": "node ./scripts/butler-push.js",
+    "publish": "npm run build && npm run push all"
   },
   "repository": {
     "type": "git",
@@ -31,6 +27,8 @@
     "electron-packager": "^14.0.5"
   },
   "dependencies": {
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "compare-versions": "^3.5.1",
+    "node-fetch": "^2.6.0"
   }
 }
