--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bitsy-savior",
   "version": "1.3.0",
   "description": "bitsy editor by Adam Le Doux put in a desktop app. can update game data in exported html files on your disk. super useful when you work with bitsy-hacks",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
     "start": "electron .",
     "clean": "rm -rf ./build/* && echo \"cleaned build location\"",
