--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "electron-packager": "^14.0.5"
   },
   "dependencies": {
-    "fs-extra": "^8.1.0",
     "compare-versions": "^3.5.1",
-    "node-fetch": "^2.6.0"
+    "fs-extra": "^8.1.0",
+    "node-fetch": "^2.6.0",
+    "normalize-url": "^5.3.0"
   }
 }
